Fixed form alignment on mobile.

--- a/style.css
+++ b/style.css
@@ -320,7 +320,7 @@ body {
 }
 
 #contact-form-container {
-    width: 50%;
+    width: 75%;
     margin: 0 auto;
     text-align: center;
 }
